--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -3,3 +3,4 @@ connection_host = ip
 host = ip-172-31-1-209.ap-south-1.compute.internal
 index = softmania_syslog_monitoring_idx
 sourcetype = SM_Syslog
+disabled = 1
